--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.18",
+        "axios": "^0.18.0",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
@@ -20,6 +20,16 @@
         "vue": "^2.5.17"
     },
     "dependencies": {
-        "vue-router": "^3.0.2"
+        "dayjs": "^1.7.7",
+        "gantt-elastic": "^0.2.10",
+        "vue-awesome": "^3.2.0",
+        "vue-cookie": "^1.1.4",
+        "vue-flatpickr-component": "^8.0.0",
+        "vue-resource": "^1.5.1",
+        "vue-router": "^3.0.2",
+        "vue-slider-component": "^2.8.2",
+        "vue-snotify": "^3.2.1",
+        "vue-switches": "^2.0.1",
+        "vuex": "^3.0.1"
     }
 }
