--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:SwhPPZfLrQRlH9+hGr+6xIvP4YefvqXDRjXi+VYqxI8=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://165.227.166.148
 
 LOG_CHANNEL=stack
 
